; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_commit_ts.c_CompleteCommitTsInitialization.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_commit_ts.c_CompleteCommitTsInitialization.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@track_commit_timestamp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CompleteCommitTsInitialization() #0 {
  %1 = load i32, i32* @track_commit_timestamp, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 (...) @DeactivateCommitTs()
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @ActivateCommitTs()
  br label %7

7:                                                ; preds = %5, %3
  ret void
}

declare dso_local i32 @DeactivateCommitTs(...) #1

declare dso_local i32 @ActivateCommitTs(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
